@@ -1,7 +1,6 @@
 package org.jabref.gui.copyfiles;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.function.BiFunction;
 
@@ -17,9 +16,9 @@ import org.jabref.preferences.JabRefPreferences;
 
 public class CopySingleFileAction {
 
-    private LinkedFile linkedFile;
-    private DialogService dialogService;
-    private BibDatabaseContext databaseContext;
+    private final LinkedFile linkedFile;
+    private final DialogService dialogService;
+    private final BibDatabaseContext databaseContext;
     private final BiFunction<Path, Path, Path> resolvePathFilename = (path, file) -> {
         return path.resolve(file.getFileName());
     };
@@ -32,11 +31,10 @@ public class CopySingleFileAction {
 
     public void copyFile() {
         DirectoryDialogConfiguration dirDialogConfiguration = new DirectoryDialogConfiguration.Builder()
-                                                                                                        .withInitialDirectory(Paths.get(Globals.prefs.get(JabRefPreferences.EXPORT_WORKING_DIRECTORY)))
-                                                                                                        .build();
+                .withInitialDirectory(Path.of(Globals.prefs.get(JabRefPreferences.EXPORT_WORKING_DIRECTORY)))
+                .build();
         Optional<Path> exportPath = dialogService.showDirectorySelectionDialog(dirDialogConfiguration);
         exportPath.ifPresent(this::copyFileToDestination);
-
     }
 
     private void copyFileToDestination(Path exportPath) {
@@ -54,6 +52,5 @@ public class CopySingleFileAction {
         } else {
             dialogService.showErrorDialogAndWait(Localization.lang("Could not resolve the file %0", fileToExport.map(Path::getParent).map(Path::toString).orElse("")));
         }
-
     }
 }
